--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
@@ -7,17 +7,21 @@ h1 {
     text-align: center;
     font-size: 500%;
     box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.42);
-    background-color: rgba(0, 0, 0, 0.192);
+    background-color: rgba(0, 0, 0, 0.192);+
 }
 main {
     width: 90%;
     margin:auto
+}
+.main-article-title {
+    font-size: 250%;
 }
 
 h2 {
 font-family: 'Nunito',
 sans-serif;
 }
+
 h3 {
     font-family: 'Quicksand',
     sans-serif;
@@ -27,29 +31,41 @@ article:nth-last-of-type(1) > article:nth-child(1) > h2:nth-child(1) {
     font-size: 180%;
     padding-top: 15px;
 }
+.imagem-dos-artigos {
+    border-radius: 30px;
+}
+.table-title-wrapper p {
+    width: 45%;
+    text-align: center;
+    margin: auto;
+    font-size: 125%;
+    padding: 1%;    
+}
+.tabela {
+
+    background-color: darkseagreen;
+}
+table {
+    width: 100%;
+    background-color: cornsilk;
+}
 td,
 th {
     border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
 }
 
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
 
 header {
-
     display: flex;
     justify-content: center;
     min-height: 100vh;
     background-image: url(./1440px-Odontodactylus_scyllarus1.jpg);
     background-size: cover;
     color: white;
-}
+    }
 
 .navigation {
-    background-color: #30AADD;
+    background-color: #c0ecffba;
     list-style-type: none;
     text-align: center;
     margin: 0;
@@ -75,7 +91,9 @@ font-style: italic;
     padding: 5px;
 }
 .child-article {
-    background: #c3f8ff;
+    /* background: #f6c4c4; */
+    border: 1px solid black;
+    margin: 15px;
 }
 .child-article h2, p {
     margin: 15px;
