--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
@@ -1,5 +1,5 @@
 body {
-    margin-left: auto;
+    /* margin-left: auto; */
 }
 
 h1 {
@@ -31,8 +31,14 @@ article:nth-last-of-type(1) > article:nth-child(1) > h2:nth-child(1) {
     font-size: 180%;
     padding-top: 15px;
 }
+.img-post-wrapper {
+    display: flex;
+}
 .imagem-dos-artigos {
     border-radius: 30px;
+    width: 40%;
+    height: auto;
+   margin: auto;
 }
 .table-title-wrapper p {
     width: 45%;
@@ -95,10 +101,35 @@ font-style: italic;
     border: 1px solid black;
     margin: 15px;
 }
+.child-article h2 {
+border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+.child-article >  p::first-letter {
+    color: red;
+    font-size: 130% 
+}
+.child-article p {
+    text-align: justify;
+    font-weight: 500;
+}
+
 .child-article h2, p {
     margin: 15px;
     font-size: 120%;
 }
 .last-sec {
     background-color: #b4b4b4;
+}
+.last-sec > nav {
+    text-align: center;
+}
+.last-sec ul li {
+    display: inline-block;
+    padding: 0% 20px;
+    font-size: 18px;
+}
+
+footer {
+font-family: "PT Sans";
+text-align: center;
 }
