--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/style.css
@@ -6,7 +6,6 @@ header {
 }
 
 #containerGeral {
-	/*width: 700px;*/
 	margin: auto;
 	background-color: rgb(255, 255, 255);
 }
@@ -17,13 +16,9 @@ h1 {
 	border: 1px rgb(113, 113, 113) solid;
 }
 
-form {
-	border: 1px solid black;
-	padding: 10px;
-}
-#name-input,
-#email-input {
-	width: 98%;
+#email-container,
+#name-container {
+	margin-top: 1%;
 }
 #categorias {
 	margin-top: 5px;
@@ -35,7 +30,10 @@ form {
 
 #emailHelp {
 	display: block;
-	margin-bottom: 3%;
+	margin-bottom: 2.5%;
+}
+#testemonial {
+	margin-top: 2%;
 }
 
 textarea {
@@ -61,4 +59,8 @@ button[type="reset"] {
 	background-color: rgb(90, 227, 124);
 	text-align: center;
 	margin: auto;
+}
+
+#footer-p {
+	text-align: center;
 }
